# claude-usage-widget

./: package.json
.github/workflows/: release.yml
docs/: antigravity-quota-integration.md
docs/superpowers/specs/: 2026-07-03-claude-fable-gauge-design.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cli_refresher.rs  commands.rs  diag.rs  lib.rs  types.rs
src-tauri/src/providers/: antigravity_cred.rs  claude.rs  codex.rs  gemini.rs  mod.rs
src/components/: Header.tsx  MiniGauge.tsx  ProviderCard.tsx  SettingsMenu.tsx  UsageGauge.tsx
src/lib/: format.ts
